# boilrpy

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: dependencies_manager.md  index.md
docs/fr/: dependencies_manager.md  index.md
src/boilrpy/: __init__.py  __main__.py  cli.py  config.py  file_generator.py  file_writer.py  flask_app_creator.py  input_validator.py  poetry_creator.py  project_creator.py
src/boilrpy/decorators/: color_decorator.py
src/boilrpy/dependency_creators/: __init__.py  base_dependency_creator.py  checker.py  conda_creator.py  factory.py  pip_creator.py  poetry_creator.py  uv_creator.py
tests/: __init__.py  _test_main.py  conftest.py  test_cli.py  test_config.py  test_failed_git_initialization.py  test_file_generator.py  test_file_writer.py  test_flask_app_creator.py  test_input_validator.py  test_main.py  test_poetry_creator.py  test_project_creator.py  test_string_formatter.py
tests/decorators/: test_color_decorator.py
tests/dependency_creators/: __init__.py  test_base_dependency_creator.py  test_checker.py  test_conda_creator.py  test_factory.py  test_pip_creator.py  test_poetry_creator.py  test_project_creator.py  test_uv_creator.py
tests/file_generators/: _test_readme_generator.py  test_base_generator.py  test_changelog_generator.py  test_dockerfile_generator.py  test_flask_generator.py  test_gitignore_generator.py  test_license_generator.py  test_main_file_generator.py  test_pylint_generator.py  test_readme_generator.py  test_requirements_generator.py
(+13 files in other folders)
